tests/compile-fail/integration__integration__general__recursive_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: cycle in const definition
   ┌─ <input>:20:19
   │
20 │         const int UH_OH = UMMMM;
   │                   ^^^^^ cyclic const
21 │         const int UMMMM = HALP;
22 │         const int HALP = UH_OH;
   │                          ----- depends on its own value here


